# robotDevastation-robots

./: .cproject  .gitignore  .project  CMakeLists.txt  CONTRIBUTING.md  README.md
bindings/: CMakeLists.txt  rd.i
ecro/software/: CMakeLists.txt  LaunchEcro.cpp  LaunchEcro.hpp  main.cpp
ecro/software/nanobot/: NanoBot.cpp
ecro/software/share/launchEcro/conf/: launchEcro.ini
laserTowerOfDeath/software/: CMakeLists.txt
laserTowerOfDeath/software/LaserTowerOfDeath/: CMakeLists.txt  DeviceDriverImpl.cpp  LaserTowerOfDeath.cpp  LaserTowerOfDeath.hpp
libraries/: CMakeLists.txt
libraries/YarpPlugins/: CMakeLists.txt  IRobotManager.hpp  RobotManager.hpp
libraries/YarpPlugins/BatteryComparatorMeter/: BatteryComparatorMeter.cpp  BatteryComparatorMeter.hpp  BatteryComparatorMeter.hpp.autosave  BatteryComparatorMeter.ini  CMakeLists.txt  DeviceDriverImpl.cpp  IBatteryImpl.cpp
libraries/YarpPlugins/EcroPwmController/: CMakeLists.txt  DeviceDriverImpl.cpp  EcroPwmController.cpp  EcroPwmController.hpp  EcroPwmController.ini
libraries/YarpPlugins/EcroWheelController/: CMakeLists.txt  DeviceDriverImpl.cpp  EcroWheelController.cpp  EcroWheelController.hpp  EcroWheelController.ini
libraries/YarpPlugins/FakeMotorController/: CMakeLists.txt  DeviceDriverImpl.cpp  FakeMotorController.cpp  FakeMotorController.hpp  FakeMotorController.ini
libraries/YarpPlugins/LaserTowerOfDeath/: CMakeLists.txt  LaserTowerOfDeath.hpp
libraries/YarpPlugins/LaserTowerOfDeathController/: CMakeLists.txt  DeviceDriverImpl.cpp  LaserTowerOfDeathController.cpp  LaserTowerOfDeathController.hpp  LaserTowerOfDeathController.ini
libraries/YarpPlugins/PhidgetSpatial/: CMakeLists.txt  DeviceDriverImpl.cpp  HelperFuncs.cpp  IAnalogSensorImpl.cpp  PhidgetSpatial.cpp  PhidgetSpatial.hpp  PhidgetSpatial.ini
libraries/YarpPlugins/RaspiOnePwmMotorController/: CMakeLists.txt  DeviceDriverImpl.cpp  RaspiOnePwmMotorController.cpp  RaspiOnePwmMotorController.hpp  RaspiOnePwmMotorController.ini
libraries/YarpPlugins/RaspiTwoPwmMotorController/: CMakeLists.txt  DeviceDriverImpl.cpp  RaspiTwoPwmMotorController.cpp  RaspiTwoPwmMotorController.hpp  RaspiTwoPwmMotorController.ini  RdTwoPwmMotors.ini
libraries/YarpPlugins/RdArduinoClient/: CMakeLists.txt  DeviceDriverImpl.cpp  LaserTowerOfDeath.cpp  LaserTowerOfDeath.ini  RdArduinoClient.cpp  RdArduinoClient.hpp
libraries/YarpPlugins/RdFakeMotors/: CMakeLists.txt  RdFakeMotors.ini
libraries/YarpPlugins/RdOnePwmMotors/: CMakeLists.txt  DeviceDriverImpl.cpp  RdOnePwmMotors.hpp
libraries/YarpPlugins/RdRobotServer/: CMakeLists.txt  RdRobotServer.cpp  RdRobotServer.hpp
libraries/YarpPlugins/RdSerialClient/: DeviceDriverImpl.cpp  RdSerialClient.cpp  RdSerialClient.hpp  RdSerialClient.ini
libraries/YarpPlugins/RdTwoPwmMotors/: CMakeLists.txt  RdTwoPwmMotors.cpp  RdTwoPwmMotors.hpp
libraries/YarpPlugins/RobotClient/: CMakeLists.txt  DeviceDriverImpl.cpp  RobotClient.cpp  RobotClient.hpp  RobotClient.ini
libraries/YarpPlugins/RobotServer/: CMakeLists.txt  DeviceDriverImpl.cpp  RdRobotServer.ini  RobotServer.cpp  RobotServer.hpp  RobotServer.ini
raspi/: CMakeLists.txt
raspi/cmake/template/: RD1Config.cmake.in
raspi/doc/: groups.dox  main.dox  rd1_install_on_raspbian_7.dox  rd1_install_yarp_on_raspbian_7.dox
raspi/libraries/: CMakeLists.txt
raspi/libraries/RaspiYarp/: CMakeLists.txt  IRdRobot.h
raspi/libraries/RaspiYarp/DoubleHBridge/: IVelocityControlImpl.cpp
raspi/libraries/RaspiYarp/OnePwmMotor/: DeviceDriverImpl.cpp
raspi/libraries/RaspiYarp/OnePwmMotors/: CMakeLists.txt  DeviceDriverImpl.cpp  IEncodersImpl.cpp  IEncodersTimedImpl.cpp  IPositionControlImpl.cpp  IVelocityControlImpl.cpp  OnePwmMotors.cpp  OnePwmMotors.hpp  PwmBot.cpp  PwmBot.hpp
raspi/libraries/RaspiYarp/RdFakeMotors/: CMakeLists.txt  DeviceDriverImpl.cpp  RdFakeMotors.cpp  RdFakeMotors.hpp
raspi/libraries/RaspiYarp/RdOnePwmMotors/: CMakeLists.txt  DeviceDriverImpl.cpp  RdOnePwmMotors.cpp  RdOnePwmMotors.hpp
raspi/libraries/RaspiYarp/RdRobotServer/: CMakeLists.txt  DeviceDriverImpl.cpp  RdRobotServer.cpp  RdRobotServer.hpp
raspi/libraries/RaspiYarp/RdTwoPwmMotors/: CMakeLists.txt  DeviceDriverImpl.cpp  RdTwoPwmMotors.cpp  RdTwoPwmMotors.hpp  pwm.hpp
raspi/libraries/RaspiYarp/TwoPwmMotor/: IEncodersImpl.cpp
raspi/libraries/RaspiYarp/TwoPwmMotors/: CMakeLists.txt  DeviceDriverImpl.cpp  IEncodersImpl.cpp  IEncodersTimedImpl.cpp  IPositionControlImpl.cpp  IVelocityControlImpl.cpp  TwoPwmMotors.cpp  TwoPwmMotors.hpp
raspi/libraries/RaspiYarp/pwmbot/: CMakeLists.txt
raspi/share/: CMakeLists.txt
raspi/share/launchRd1/: CMakeLists.txt
raspi/web/: index.php
rd1/software/: CMakeLists.txt  LaunchRd1.cpp  LaunchRd1.hpp  main.cpp
rd1/software/cmake/template/: RD1Config.cmake.in
rd1/software/doc/: main.dox  rd1_install_cmake_on_raspbian_7.dox  rd1_install_on_raspbian_7.dox  rd1_install_opencv_on_raspbian_7.dox  rd1_install_yarp_on_raspbian_7.dox
rd1/software/emptybot/: EmptyBot.hpp  IPositionImpl.cpp
rd1/software/libraries/Rd1Yarp/: CMakeLists.txt
rd1/software/pwmbot/: IEncoderImpl.cpp  PwmBot.cpp  PwmBot.hpp
rd1/software/share/: CMakeLists.txt
rd1/software/share/launchRd1/conf/: launchRd1.ini
rd1/software/src/libraries/: CMakeLists.txt
rd1/software/src/libraries/Rd1Yarp/: CMakeLists.txt
rd1/software/src/programs/: CMakeLists.txt
rd1/software/src/programs/configRd1/: CMakeLists.txt  ConfigRd1.cpp  ConfigRd1.hpp  WebResponder.cpp  main.cpp
rd1/software/src/programs/launchRd1/: CMakeLists.txt  LaunchRd1.cpp  LaunchRd1.hpp  main.cpp
rd1/software/web/: index.php  save.php
rd2/software/: CMakeLists.txt  LaunchRd2.cpp  LaunchRd2.hpp  main.cpp
rd2/software/ardubot/: ArduBot.cpp  ArduBot.hpp  CMakeLists.txt  IDeviceImpl.cpp  IEncoderImpl.cpp  IPositionImpl.cpp  IVelocityImpl.cpp
rd2/software/share/launchRd2/conf/: launchRd2.ini
scripts/: CMakeLists.txt
scripts/admin/: update-dox.sh
scripts/etc/service/launchCamera/: run
scripts/etc/service/launchRobot/: run
scripts/etc/service/yarprun/: run
scripts/gnome/: robotDevastation-robots.desktop
(+70 files in other folders)
